# convertFlow

./: .gitignore  DESIGN.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.5.md  RESEARCH_FEATURES.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: desktop-release.yml
docs/: utilities-tab-ceo-plan.md
functions/api/: parse-doc.ts  subscribe.ts
public/: _headers  latest.json  robots.txt  sitemap.xml
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChunkBoundaryOverlay.svelte  ChunkEmbedderPicker.svelte  ChunkLoader.svelte  ChunkMetadataPanel.svelte  ChunkPreview.svelte  ChunkStatsPanel.svelte  ChunkStrategyPicker.svelte  ChunkTab.svelte  ChunkTrustStrip.svelte  ChunksList.svelte  CommandPalette.svelte  CompareWidget.svelte  ConvertDatasetPanel.svelte  ConvertExportBar.svelte  ConvertImportPanel.svelte  ConvertJsonlPrep.svelte  ConvertPresetBar.svelte  ConvertProblemsPanel.svelte  ConvertStatsPanel.svelte  ConvertTab.svelte  ConvertToolbar.svelte  CsvTableView.svelte  EditorFormatBar.svelte  EditorIsland.svelte  EditorTab.svelte  EmailCapture.svelte  HfHubPushDialog.svelte  MagpieGenerateDialog.svelte  PrepLockButton.svelte  PushFinetuneDialog.svelte  StatusBar.svelte  SupportPanel.svelte  TabStrip.svelte  TopBar.svelte  Tour.svelte  UtilitiesTab.svelte  UtilityToolPanel.svelte
src/data/: embedders.json  presets.json
(+102 files in other folders)
